2006-10-03  Kenichi Handa  <handa@m17n.org>

	* FOR-RELEASE (BUGS): "An iso-8859-6 cannot be saved" fixed.

2006-08-13  Chong Yidong  <cyd@stupidchicken.com>

	* FOR-RELEASE: Elisp manual checking completed.

2006-07-17  Reiner Steib  <Reiner.Steib@gmx.de>

	* FOR-RELEASE: Update refcard section.

2006-07-14  Kim F. Storm  <storm@cua.dk>

	* FOR-RELEASE (BUGS): High cpu load on windows server sockets fixed.

2006-07-09  Kim F. Storm  <storm@cua.dk>

	* README: Use outline format.  Add FOR-RELEASE.

2006-06-27  Chong Yidong  <cyd@stupidchicken.com>

	* FOR-RELEASE: Checking of info.texi done.

2006-06-08  Reiner Steib  <Reiner.Steib@gmx.de>

	* FOR-RELEASE: Update refcard section.

2006-06-07  Reiner Steib  <Reiner.Steib@gmx.de>

	* FOR-RELEASE: Update refcard section.

2006-05-25  Chong Yidong  <cyd@stupidchicken.com>

	* FOR-RELEASE: Key sequence elisp node done.

2006-05-24  Reiner Steib  <Reiner.Steib@gmx.de>

	* FOR-RELEASE: Update refcard translations.  Add coding cookie.

2006-05-21  Chong Yidong  <cyd@mit.edu>

	* FOR-RELEASE: point-entered /point-left bug fixed.

2006-05-12  Eli Zaretskii  <eliz@gnu.org>

	* FOR-RELEASE: Spell-checking the manuals is now done; remove the
	entry.

2006-05-06  Bill Wohler  <wohler@newt.com>

	* FOR-RELEASE: MH-E 8.0 has been released, so removed reminder
	about it.

2006-04-17 Ramprasad B <ramprasad_i82@yahoo.com>

	* ./* (Copyright): Updated Copyright year(s)

2006-02-24  Reiner Steib  <Reiner.Steib@gmx.de>

	* FOR-RELEASE (BUGS): Add URLs/MIDs.

2006-02-20  Kim F. Storm  <storm@cua.dk>

	* FOR-RELEASE (NEW FEATURES): Completed work on this item:
	Rework how fringe bitmaps are defined and used.
	Currently, bitmap usage and bitmap appearence are "mixed-up" in a
	one-level representation.  It would be cleaner to split the
	representation into a two-level model where first level maps
	bitmap usage to a bitmap name, and second level maps bitmap name to
	a bitmap appearence.

2006-01-27  Chong Yidong  <cyd@stupidchicken.com>
